# qt-db-ui_-1

./: CMakeLists.txt  README.md  init.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
.github/: FUNDING.yml
core/: answer.cpp  answer.h  jsonserializable.h  permissions.h  question.cpp  question.h  test.cpp  test.h  testmanager.cpp  testmanager.h  user.cpp  user.h  usermanager.cpp  usermanager.h  utils.cpp  utils.h
data/: users.json
gui/: loginwindow.cpp  loginwindow.h  loginwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  testeditor.cpp  testeditor.h  testeditor.ui  testpasser.cpp  testpasser.h  testpasser.ui  testviewer.cpp  testviewer.h  testviewer.ui  ui_loginwindow.h  ui_settingsdialog.h  ui_testeditor.h  ui_testpasser.h  ui_testviewer.h
resources/: themes.qrc
resources/styles/: themes.qss
